# MovieTime6502

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeUserPresets.json  README.md
lb/: MovieTime6502_lb.c  constants_lb.h  help_lb.txt
src/: constants.h  input.c  input.h  main.c  palette.h  read_xram_split.c
tools/: _gen_lb_tiles.py  encode_movie.py  encode_movie_lb.py  encode_movie_v2.py  encode_movie_v3.py  encode_movie_v3c.py  encode_movie_v4.py  generate_showcase.py  generate_showcase_v2.1.py  generate_showcase_v2.py  generate_showcase_v3.py  generate_showcase_v4.py  generate_showcase_v5.py  generate_showcase_v6.py
